# GroundStation

./: .gitignore  ArrowButton.qml  AttitudeView.qml  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.62192f8  CMakeLists.txt.user.e24f105  Clock.qml  ConnectionView.qml  CustomSwitch.qml  DataAxis.qml  DataGraph.qml  DataSeries.qml  DataTable.qml  DataView.qml  DeviceDialog.qml  DeviceDialogSelect.qml  Indicator.qml  Main.qml  PSPMap.qml  PyroIndicator.qml  README.md  TapeAltimeter.qml  clock.cpp  clock.h  connection_status.cpp  connection_status.h  console.cpp  console.h  crc.cpp  crc.h  data.h  data_table.cpp  data_table.h  datachart.cpp  datachart.h  device.cpp  device.h  fileio.cpp  fileio.h  (+24 more)
.cache/clangd/index/: device.h.EBA27FD4C08ACD93.idx  fileio.h.FFA03CBCAB6F9B97.idx  pspcom_decoder.h.1D3D278ED6207747.idx  pspcom_reader.h.31EE3B8321330004.idx  pspcommsg.h.93465B4776595344.idx  settings.h.FF449D17AA4F30B4.idx
AppStyle/: AppStyle.qml
Resources/: palette_main.xml
data_table/: data_table.cpp  data_table.h  data_table_row.h  datatableconfig.cpp  hab_table.cpp  hab_table.h  pal_table.cpp  pal_table.h
display/: connection_status.cpp  data_table.cpp  data_table.h  data_table_row.cpp  data_table_row.h  datatableconfig.cpp  datatableconfig.h  datatableconfig.ui  map.cpp  map.qml  pyro_status.cpp  pyro_status.h  tape_altimeter.cpp  tape_altimeter.h  tape_altimeter.qml
installer/: installercmd.txt
installer/config/: config.xml
menus/: createdevice.cpp  createdevice.h  createdevice.ui  createpspcom.cpp  createpspcom.h  createpspcom.ui  devicemenu.cpp  devicemenu.h  devicemenu.ui  editdevice.cpp  editdevice.h  editdevice.ui  pyro_menu.cpp  pyro_menu.h  pyro_menu.ui  resetdevice.cpp  resetdevice.h  resetdevice.ui  selectmenu.cpp  selectmenu.h  selectmenu.ui
pspcom/: crc.cpp  crc.h  pspcom.cpp  pspcom.h  pspcommsg.h  pspcomworker.cpp  pspcomworker.h
serial/: serial.cpp  serial.h  serial_device.cpp  serial_device.h  serial_port.cpp  serial_port.h  udp_port.cpp  udp_port.h
serial/devices/: generic_serial.cpp  generic_serial.h  hab_tracker.cpp  hab_tracker.h  hab_tracker_lora.cpp  hab_tracker_lora.h  pal_9k31.cpp  pal_9k31.h  serial_device.cpp  serial_device.h
serial/parsers/: hab_parser.cpp  hab_parser.h  pal_parser.cpp  pal_parser.h
utils/: comboboxdelegate.cpp  comboboxdelegate.h  equatable.h  misc.cpp  misc.h  search.h
